ISTIO/k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-app
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-app
  template:
    metadata:
      labels:
        app: fastapi-app
    spec:
      containers:
      - name: fastapi-app
        image: registry.example.com/fastapi-app
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-app
  namespace: demo
spec:
  selector:
    app: fastapi-app
  ports:
    - port: 80
      targetPort: 8000
